@@ -1,3 +1,6 @@
+* Wed Aug 23 2023 Steven Pritchard <steve@sicura.us> - 2.10.0
+- Add AlmaLinux 8 support
+
 * Mon Jun 12 2023 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.9.0
 - Add RockyLinux 8 support
 
